--- a/package.json
+++ b/package.json
@@ -20,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/dezkareid/PokeMap/issues"
   },
-  "homepage": "https://github.com/dezkareid/PokeMap#readme"
+  "homepage": "https://github.com/dezkareid/PokeMap#readme",
+  "dependencies": {
+    "react": "^0.13.3",
+    "react-global": "^0.1.8"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "react-hot-loader": "^1.3.0",
+    "react-router": "^0.13.3",
+    "webpack": "^1.12.2"
+  }
 }
