--- a/package.json
+++ b/package.json
@@ -22,14 +22,24 @@
   },
   "homepage": "https://github.com/dezkareid/PokeMap#readme",
   "dependencies": {
-    "react": "^0.13.3",
-    "react-global": "^0.1.8"
+    "babel": "^5.8.23",
+    "express": "^4.13.3",
+    "isomorphine": "^0.4.2",
+    "mongoose": "^4.1.8",
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.4.2",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-task-loader": "^1.2.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "^0.13.3",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.11.0"
   }
 }
